--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,4 @@
-yo yo yo 
+"= COFFEE FORWARD
+<em>This app will allow you to pay it forward!</em>
+
+This website allows you to forward a coffee to your friend.
